fix: check file

--- a/Notebook-without-nvidia.ipynb
+++ b/Notebook-without-nvidia.ipynb
@@ -46,18 +46,28 @@
       ],
       "source": [
         "#@title Setup dependencies\n",
+        "import os\n",
         "\n",
         "!git clone https://github.com/sanviiz/hairstyle-try-on.git\n",
         "%cd 'hairstyle-try-on'\n",
         "\n",
-        "# download face segmentation model\n",
-        "!wget https://is3.cloudhost.id/erp-sehati/AI/face_segment_checkpoints_256.pth.tar\n",
-        "!mv face_segment_checkpoints_256.pth.tar ./image_segmentation/face_segment_checkpoints_256.pth.tar\n",
+        "# Check if face segmentation model already exists\n",
+        "face_segmentation_path = './image_segmentation/face_segment_checkpoints_256.pth.tar'\n",
+        "if not os.path.exists(face_segmentation_path):\n",
+        "    !wget https://is3.cloudhost.id/erp-sehati/AI/face_segment_checkpoints_256.pth.tar\n",
+        "    !mv face_segment_checkpoints_256.pth.tar ./image_segmentation/face_segment_checkpoints_256.pth.tar\n",
+        "else:\n",
+        "    print(f\"{face_segmentation_path} already exists.\")\n",
         "\n",
-        "# download sdedit model\n",
-        "!wget https://is3.cloudhost.id/erp-sehati/AI/celeba_hq.ckpt\n",
-        "!mkdir checkpoints\n",
-        "!mv celeba_hq.ckpt ./checkpoints/celeba_hq.ckpt\n",
+        "# Check if sdedit model already exists\n",
+        "sdedit_model_path = './checkpoints/celeba_hq.ckpt'\n",
+        "if not os.path.exists(sdedit_model_path):\n",
+        "    !wget https://is3.cloudhost.id/erp-sehati/AI/celeba_hq.ckpt\n",
+        "    if not os.path.exists('./checkpoints'):\n",
+        "        os.makedirs('./checkpoints')\n",
+        "    !mv celeba_hq.ckpt ./checkpoints/celeba_hq.ckpt\n",
+        "else:\n",
+        "    print(f\"{sdedit_model_path} already exists.\")\n",
         "\n",
         "# install librabies\n",
         "!pip -q install pyyaml \\\n",
