--- a/Notebook-without-nvidia.ipynb
+++ b/Notebook-without-nvidia.ipynb
@@ -48,6 +48,11 @@
         "#@title Setup dependencies\n",
         "import os\n",
         "\n",
+        "# Install git\n",
+        "!apt-get update\n",
+        "!apt-get install -y git\n",
+        "\n",
+        "# Clone the repository\n",
         "!git clone https://github.com/sanviiz/hairstyle-try-on.git\n",
         "%cd 'hairstyle-try-on'\n",
         "\n",
