--- a/Notebook-without-nvidia.ipynb
+++ b/Notebook-without-nvidia.ipynb
@@ -47,10 +47,15 @@
       "source": [
         "#@title Setup dependencies\n",
         "import os\n",
-        "\n",
+        "%cd './'\n",
         "# Clone the repository\n",
-        "!git clone https://github.com/sanviiz/hairstyle-try-on.git\n",
-        "%cd 'hairstyle-try-on'\n",
+        "hairstyle = './hairstyle-try-on'\n",
+        "if not os.path.exists(hairstyle):\n",
+        "    !git clone https://github.com/sanviiz/hairstyle-try-on.git\n",
+        "else:\n",
+        "    print(f\"{hairstyle} already exists.\")\n",
+        "    \n",
+        "%cd './hairstyle-try-on'\n",
         "\n",
         "# Check if face segmentation model already exists\n",
         "face_segmentation_path = './image_segmentation/face_segment_checkpoints_256.pth.tar'\n",
