--- a/Notebook-without-nvidia.ipynb
+++ b/Notebook-without-nvidia.ipynb
@@ -65,15 +65,13 @@
         "else:\n",
         "    print(f\"{face_segmentation_path} already exists.\")\n",
         "\n",
-        "# Check if sdedit model already exists\n",
-        "sdedit_model_path = './checkpoints/celeba_hq.ckpt'\n",
-        "if not os.path.exists(sdedit_model_path):\n",
+        "# Check if celebahq model already exists\n",
+        "celebahq = './checkpoints/celeba_hq.ckpt'\n",
+        "if not os.path.exists(celebahq):\n",
         "    !wget https://is3.cloudhost.id/erp-sehati/AI/celeba_hq.ckpt\n",
-        "    if not os.path.exists('./checkpoints'):\n",
-        "        os.makedirs('./checkpoints')\n",
         "    !mv celeba_hq.ckpt ./checkpoints/celeba_hq.ckpt\n",
         "else:\n",
-        "    print(f\"{sdedit_model_path} already exists.\")\n",
+        "    print(f\"{celebahq} already exists.\")\n",
         "\n",
         "# install librabies\n",
         "!pip -q install pyyaml \\\n",
