--- a/Notebook-without-nvidia.ipynb
+++ b/Notebook-without-nvidia.ipynb
@@ -259,13 +259,14 @@
       },
       "outputs": [],
       "source": [
+        "import subprocess\n",
         "from pyngrok import ngrok\n",
         "\n",
         "# Set your ngrok auth token\n",
         "ngrok.set_auth_token('1ZUSjbzswWes79aSOOblEYn1is0_2W1XQVFzEHHMzwMw9kdQB')\n",
         "\n",
-        "# Start the Streamlit app on port 80\n",
-        "!nohup streamlit run app.py --server.port 80 &\n",
+        "# Start the Streamlit app on port 80 using subprocess\n",
+        "process = subprocess.Popen(['streamlit', 'run', 'app.py', '--server.port', '80'])\n",
         "\n",
         "# Connect ngrok to port 80\n",
         "url = ngrok.connect(80)\n",
