--- a/Notebook-without-nvidia.ipynb
+++ b/Notebook-without-nvidia.ipynb
@@ -102,6 +102,7 @@
         "import os\n",
         "import logging\n",
         "import traceback\n",
+        "import torch\n",
         "from image_segmentation.segment_inference import face_segment\n",
         "from runners.image_editing import Diffusion\n",
         "from image_landmark_transform.face_landmark import face_landmark_transform\n",
@@ -172,6 +173,12 @@
         "        args['image_folder'] = 'images' # The folder name of samples\n",
         "        args['ni'] = True # No interaction. Suitable for Slurm Job launcher\n",
         "        args['is_erode_mask'] = True\n",
+        "\n",
+        "        # Load the model with appropriate device mapping\n",
+        "        device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+        "        args['device'] = device\n",
+        "        args['seg_model'] = torch.load(args['seg_model_path'], map_location=device)\n",
+        "        \n",
         "        return args\n",
         "\n",
         "    @st.cache\n",
